// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Marker /> matches render snapshot, selected 1`] = `
<div
  className="markerContainer hint--color-white-override hint--html hint--info hint--bottom hint--always markerOriginBottomCenter"
  onClick={[Function]}
>
  <img
    alt="this place map marker"
    src="/images/map_marker_selected.svg"
  />
  <div
    className="hint__content hintContainer"
  >
    <h6>
      this place
    </h6>
  </div>
</div>
`;

exports[`<Marker /> matches render snapshot, unselected 1`] = `
<div
  className="markerContainer hint--color-white-override hint--html hint--info hint--bottom hint--hidden markerOriginBottomCenter"
  onClick={[Function]}
>
  <img
    alt="this place map marker"
    src="/images/map_marker_unselected.svg"
  />
  <div
    className="hint__content hintContainer"
  >
    <h6>
      this place
    </h6>
  </div>
</div>
`;
